--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ dmypy.json
 .pyre/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
